Fix menu on mobile and refactor NavMenu and Header to be mobile-first

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,31 +9,6 @@ header {
   display: none;
 }
 
-@media (min-width: 768px) {
-  .header-bar {
-    display: block;
-    background: #03341c;
-    height: 35px;
-    text-align: center;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 35px;
-
-    span {
-      color: #ffb31a;
-      font-size: 16px;
-    }
-
-    img {
-      max-width: 20px;
-    }
-
-    p {
-      margin: 0;
-    }
-  }
-}
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -43,12 +18,6 @@ header {
   position: relative;
   padding: 0 1rem;
   height: 57px;
-}
-
-@media (min-width: 768px) {
-  .container {
-    height: 87px;
-  }
 }
 
 .logo {
@@ -61,11 +30,38 @@ header {
   display: block;
   width: 100%;
   height: auto;
-  max-width: 190px;
+  max-width: 134px;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) {
+  .header-bar {
+    display: block;
+    background: #03341c;
+    height: 35px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 35px;
+  }
+
+  .header-bar span {
+    color: #ffb31a;
+    font-size: 16px;
+  }
+
+  .header-bar img {
+    max-width: 20px;
+  }
+
+  .header-bar p {
+    margin: 0;
+  }
+
+  .container {
+    height: 87px;
+  }
+
   .logo img {
-    max-width: 134px;
+    max-width: 190px;
   }
 }
