--- a/src/components/NavMenu.css
+++ b/src/components/NavMenu.css
@@ -3,16 +3,15 @@
 }
 
 .menu-toggle {
-  display: none;
+  display: flex;
   background: none;
   border: none;
   color: var(--secondary-color);
-  font-size: 1rem;
+  font-size: 14px;
   cursor: pointer;
   align-items: center;
   gap: 5px;
   font-weight: 700;
-  font-size: 14px;
   line-height: 150%;
 }
 
@@ -25,60 +24,59 @@
   transform: rotate(180deg);
 }
 
-@media (max-width: 767px) {
-  .menu-toggle {
-    display: flex;
-  }
+.menu {
+  position: fixed;
+  top: 57px;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: var(--primary-color);
 
-  .menu {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    left: 0;
-    background: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+  list-style: none;
+  padding: 2rem 1rem;
+  gap: 1rem;
 
-    list-style: none;
-    padding: 1rem;
-    gap: 0;
-    opacity: 0;
-    transform: translateY(-10px);
-    pointer-events: none;
-    transition: all 0.3s ease;
-    z-index: 1000;
-  }
+  opacity: 0;
+  transform: translateY(-10px);
+  pointer-events: none;
+  transition: all 0.3s ease;
+  z-index: 1000;
+}
 
-  .menu.open {
-    width: 100vw;
-    opacity: 1;
-    transform: translate(-50%, 0);
-    pointer-events: auto;
-  }
+.menu.open {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
 
-  .menu li {
-    text-align: center;
-  }
+.menu li {
+  text-align: center;
+}
 
-  .menu a {
-    display: block;
-    padding: 0.75rem 0;
-    color: var(--secondary-color);
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 150%;
-  }
+.menu a {
+  display: block;
+  padding: 0.75rem 0;
+  color: var(--secondary-color);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+}
 
-  .customer {
-    display: none;
-  }
+.customer {
+  display: none;
 }
 
 @media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+
   .menu {
     display: flex !important;
     gap: 1rem;
@@ -98,5 +96,9 @@
 
   .menu li:last-child {
     display: none;
+  }
+
+  .customer {
+    display: block;
   }
 }
